fix online friend not showing on team pannel: change display of div.friend-out to block from none

--- a/RoadBuddy/views/static/room.css
+++ b/RoadBuddy/views/static/room.css
@@ -488,7 +488,6 @@ input[name=create-team]
 
 /* ----- team pannel ----- */
 .teams-pannel .friends-outer {
-    display: none;
     justify-content: center;
     width: 80%;
     height: 40%;
